gateway-contract/contracts/escrow_contract/check_output.txt
    Checking escrow_contract v0.0.0 (C:\Users\amarjeet patel\Desktop\myfolder222\Alien-Gateway\gateway-contract\contracts\escrow_contract)
warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts\escrow_contract\src\events.rs:173:14
    |
173 |             .publish((symbol_short!("DEPOSIT"), commitment), (amount, new_balance));
    |              ^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
  --> contracts\escrow_contract\src\test.rs:46:21
   |
46 |     let token = env.register_stellar_asset_contract(token_admin.clone());
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
   --> contracts\escrow_contract\src\test.rs:339:21
    |
339 |     let token = env.register_stellar_asset_contract(token_admin);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
   --> contracts\escrow_contract\src\test.rs:416:21
    |
416 |     let token = env.register_stellar_asset_contract(token_admin);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0369]: binary operation `==` cannot be applied to type `soroban_sdk::Val`
   --> contracts\escrow_contract\src\test.rs:532:5
    |
532 |     assert_eq!(topics.get(0).unwrap(), symbol_short!("DEPOSIT").into_val(&env));
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |     |
    |     soroban_sdk::Val
    |     _
    |
note: `soroban_sdk::Val` does not implement `PartialEq<_>`
   --> C:\Users\amarjeet patel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-env-common-23.0.1\src\val.rs:252:1
    |
252 | pub struct Val(u64);
    | ^^^^^^^^^^^^^^ `soroban_sdk::Val` is defined in another crate
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `==` cannot be applied to type `soroban_sdk::Val`
   --> contracts\escrow_contract\src\test.rs:533:5
    |
533 |     assert_eq!(topics.get(1).unwrap(), from.into_val(&env));
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |     |
    |     soroban_sdk::Val
    |     _
    |
note: `soroban_sdk::Val` does not implement `PartialEq<_>`
   --> C:\Users\amarjeet patel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-env-common-23.0.1\src\val.rs:252:1
    |
252 | pub struct Val(u64);
    | ^^^^^^^^^^^^^^ `soroban_sdk::Val` is defined in another crate
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `==` cannot be applied to type `soroban_sdk::Val`
   --> contracts\escrow_contract\src\test.rs:536:5
    |
536 |     assert_eq!(data, (deposit_amount, initial_balance + deposit_amount).into_val(&env));
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |     |
    |     soroban_sdk::Val
    |     _
    |
note: `soroban_sdk::Val` does not implement `PartialEq<_>`
   --> C:\Users\amarjeet patel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-env-common-23.0.1\src\val.rs:252:1
    |
252 | pub struct Val(u64);
    | ^^^^^^^^^^^^^^ `soroban_sdk::Val` is defined in another crate
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0369`.
warning: `escrow_contract` (lib test) generated 4 warnings
error: could not compile `escrow_contract` (lib test) due to 3 previous errors; 4 warnings emitted
